--- a/hyprland.conf
+++ b/hyprland.conf
@@ -35,12 +35,29 @@ decoration {
     }
 }
 
+
 # Force full opacity when active and a slight dim when inactive (overrides default Omarchy opacity rules)
-windowrule = opacity 1 0.95, class:.*
+windowrule {
+  name = windowrule-1
+  opacity = 1 0.95
+  match:class = .*
+}
+
 
 # Do not dim the YouTube webapp window
-windowrulev2 = nodim, class:(^brave-youtube\.com__-Default$)
-windowrulev2 = opacity 1.0 override 1.0 override, class:(^brave-youtube\.com__-Default$)
+windowrule {
+  name = windowrule-2
+  no_dim = on
+  opacity = 1.0 override 1.0 override
+  match:class = (^brave-youtube\.com__-Default$)
+}
 
-windowrulev2 = nodim, class:(^brave-www\.netflix\.com__browse-Default$)
-windowrulev2 = opacity 1.0 override 1.0 override, class:(^brave-www\.netflix\.com__browse-Default$)
+
+windowrule {
+  name = windowrule-3
+  no_dim = on
+  opacity = 1.0 override 1.0 override
+  match:class = (^brave-www\.netflix\.com__browse-Default$)
+}
+
+
